--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 <h1>Window web3: <span id="windowWeb3">origin</span></h1>
 <h1>Web3: <span id="web3">origin</span></h1>
 <h1>windowWeb3DefaultAccount: <span id="windowWeb3DefaultAccount">origin</span></h1>
+<h1>web3defaultAccount: <span id="web3defaultAccount">origin</span></h1>
 <h1>windowDefaultAccount: <span id="windowDefaultAccount">origin</span></h1>
+
+
 <h1>defaultAccount: <span id="defaultAccount">origin</span></h1>
 
 
@@ -16,7 +19,7 @@
 </body>
 <script>
     var windowWeb3 = window.web3
-    var defaultAccount = web3.defaultAccount 
+    var web3defaultAccount = web3.defaultAccount 
     var windowWeb3DefaultAccount = window.web3.defaultAccount
     var windowDefaultAccount = window.defaultAccount
     var defaultAccount = defaultAccount
@@ -26,7 +29,7 @@
     console.log("windowDefaultAccount", windowDefaultAccount)
 
     windowWeb3 && (document.getElementById("windowWeb3").innerText = windowWeb3)
-    defaultAccount && (document.getElementById("defaultAccount").innerText = defaultAccount)
+    web3defaultAccount && (document.getElementById("web3defaultAccount").innerText = web3defaultAccount)
     windowWeb3DefaultAccount && (document.getElementById("windowWeb3DefaultAccount").innerText = windowWeb3DefaultAccount)
     windowDefaultAccount && (document.getElementById("windowDefaultAccount").innerText = windowDefaultAccount)
     defaultAccount && (document.getElementById("defaultAccount").innerText = defaultAccount)
