--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
 
 <h1>defaultAccount: <span id="defaultAccount">origin</span></h1>
 
+<h1>done</h1>
 
 
 
 </body>
-<script>
+<script type="text/javascript">
     var windowWeb3 = window.web3
     var web3defaultAccount = web3.defaultAccount 
     var windowWeb3DefaultAccount = window.web3.defaultAccount
