--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
     windowDefaultAccount && (document.getElementById("windowDefaultAccount").innerText = windowDefaultAccount)
     defaultAccount && (document.getElementById("defaultAccount").innerText = defaultAccount)
 
-
+    message.postMessage("hi")
 </script>
 </html>
