--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
     console.log("windowDefaultAccount", windowDefaultAccount)
 
 
-    var WE3td = window.web3.isTDWallet
-    var WE3metamask = window.web3.isMetaMask
-    var Ethereumtd = window.ethereum.isTDWallet
-    var Ethereummetamask = window.ethereum.isMetaMask
+    var WE3td = web3.isTDWallet
+    var WE3metamask = web3.isMetaMask
+    var Ethereumtd = ethereum.isTDWallet
+    var Ethereummetamask = ethereum.isMetaMask
 
     windowWeb3 && (document.getElementById("windowWeb3").innerText = windowWeb3)
     web3defaultAccount && (document.getElementById("web3defaultAccount").innerText = web3defaultAccount)
@@ -61,7 +61,7 @@
     message.postMessage("hi")
     function fromFlutter(defaultAccount) {
     document.getElementById("defaultAccount").innerHTML = defaultAccount;
-
+    ethereum["isMetamask"]
 }
 </script>
 </html>
