--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
     var WE3metamask = web3.isMetaMask
     var Ethereumtd = ethereum.isTDWallet
     var Ethereummetamask = ethereum.isMetaMask
-    var EthereummetamaskProv = 
-        document.getElementById("WE3td").innerText = WE3td
+    var WE3metamaskProv = web3.currentProvider.isMetaMask
+    document.getElementById("WE3td").innerText = WE3td
     document.getElementById("WE3metamask").innerText = WE3metamask
    document.getElementById("Ethereumtd").innerText = Ethereumtd
     document.getElementById("Ethereummetamask").innerText = Ethereummetamask
