--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
 <script>
     var _ethereum = ethereum || window.ethereum
     var _web3 = web3 || window.web3
-    console.log("ethereum metamask", ethereum?.isMetaMask)
+    console.log("ethereum metamask", _ethereum?.isMetaMask)
+    console.log("web3 metamask", _web3?.isMetaMask)
     console.log("ethereum", _ethereum)
     console.log("web3", _web3)
     console.log("web")
