--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     // }
 </script>
 
-<script>
+<script type="text/javascript">
     var _ethereum = ethereum || window.ethereum
     var _web3 = web3 || window.web3
     console.log("ethereum metamask", _ethereum?.isMetaMask)
@@ -80,5 +80,14 @@
     console.log("ethereum", _ethereum)
     console.log("web3", _web3)
     console.log("web")
+    document.addEventListener('DOMContentLoaded', function() {
+        var _ethereum = ethereum || window.ethereum
+        var _web3 = web3 || window.web3
+        console.log("ethereum metamask", _ethereum?.isMetaMask)
+        console.log("web3 metamask", _web3?.isMetaMask)
+        console.log("ethereum", _ethereum)
+        console.log("web3", _web3)
+        console.log("web")
+    }, false);
 </script>
 </html>
