--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 
 </body>
-<script type="text/javascript">
+<!-- <script type="text/javascript">
     // console.log(window.web3)
     // // var windowWeb3 = JSON.stringify(window.web3)
     // var web3defaultAccount = web3.defaultAccount 
@@ -70,9 +70,9 @@
     // document.getElementById("defaultAccount").innerHTML = defaultAccount;
     // ethereum["isMetamask"]
     // }
-</script>
+</script> -->
 
-<script type="text/javascript">
+<script>
     var _ethereum = ethereum || window.ethereum
     var _web3 = web3 || window.web3
     console.log("ethereum metamask", _ethereum?.isMetaMask)
@@ -80,14 +80,14 @@
     console.log("ethereum", _ethereum)
     console.log("web3", _web3)
     console.log("web")
-    document.addEventListener('DOMContentLoaded', function() {
-        var _ethereum = ethereum || window.ethereum
-        var _web3 = web3 || window.web3
-        console.log("ethereum metamask", _ethereum?.isMetaMask)
-        console.log("web3 metamask", _web3?.isMetaMask)
-        console.log("ethereum", _ethereum)
-        console.log("web3", _web3)
-        console.log("web")
-    }, false);
+    // document.addEventListener('DOMContentLoaded', function() {
+    //     let _ethereum = ethereum || window.ethereum
+    //     let _web3 = web3 || window.web3
+    //     console.log("ethereum metamask", _ethereum?.isMetaMask)
+    //     console.log("web3 metamask", _web3?.isMetaMask)
+    //     console.log("ethereum", _ethereum)
+    //     console.log("web3", _web3)
+    //     console.log("web")
+    // }, false);
 </script>
 </html>
